--- a/scout_base/CMakeLists.txt
+++ b/scout_base/CMakeLists.txt
@@ -46,6 +46,7 @@ add_dependencies(scout_messenger ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 
 add_executable(scout_base_node src/scout_base_node.cpp)
 target_link_libraries(scout_base_node scout_messenger ${catkin_LIBRARIES})
+target_compile_definitions(scout_base_node PUBLIC ASIO_ENABLE_OLD_SERVICES)
 
 #############
 ## Install ##
